--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ author:
   foursquare       :
   github           : "mikepapadim"
   gitlab           :
-  google_plus      :
+  google_plus      :"https://scholar.google.de/citations?user=HXBUZ0sAAAAJ&hl=en"
   keybase          :
   instagram        : "m_papadim"
   lastfm           :
