--- a/_config.yml
+++ b/_config.yml
@@ -122,10 +122,10 @@ author:
   linkedin         : "michalis-papadimitriou" 
   pinterest        :
   soundcloud       :
-  stackoverflow    : # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
+  stackoverflow    : "2279898/mikepapadim"
   steam            : # "steamId" (the last part of your profile url, e.g. https://steamcommunity.com/id/steamId/)
   tumblr           :
-  twitter          :
+  twitter          :" mikepapadim"
   vine             :
   weibo            :
   xing             :
