--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,13 @@
 # main links
-main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+
+main: 
+  - title: "CV"
+    url: /cv/ 
+  
+  - title: "Misc"
+    url: /misc/
+
+  - title: "Publications"
+    url: /publications/
+
+
